--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,9 @@ transformers
 ipykernel
 chardet
 jupyter
-pytorch 
-torchvision 
-torchaudio 
-pytorch-cuda=12.1
 accelerate 
 bitsandbytes
 sentencepiece
 rich
+fastapi
+uvicorn
